--- a/Mini_Projet/config/routes.yaml
+++ b/Mini_Projet/config/routes.yaml
@@ -23,8 +23,10 @@ admin :
     controller : App\Controller\AdminController::admin
 
 crypto_show:
-   path: /show
+   path: /show/{id}
    controller: App\Controller\CryptoController::show
+   requirements :
+      id : '\d'
 
 #commentaire_add:
 #    path:
